# chatter

./: .env  .gitignore  CLAUDE.md  README.md  SETUP.md  debug_tool_calling.py  download_piper_models.py  install_models.py  main.py  pyproject.toml  pyrightconfig.json  run.py  test_hf_integration.py  test_llama.py  test_llama_standalone.py  test_llm_only.py  test_search_integration.py  test_search_only.py
src/chatter/: __init__.py  assistant.py  audio.py  config.py  conversation.py  llm.py  main.py  persona.py  search_tool.py  tool_manager.py  transcription.py  tts.py  types.py  ui.py
src/chatter/Prompts/: 1. Software Architect.md  10. Rogue Engineer.md  12. Changelog Reviewer.md  3. Code Explainer.md  4. Code Reviewer.md  7. Performance Engineer.md
src/voice_ai_assistant/: main.py
src/voice_ai_assistant/Prompts/: 0. Product Manager Prompt.md  11. Tech Documenter.md  13. Test Engineer.md  2. Developer.md  5. Devops Engineer.md  6. Security Engineer.md  8. SRE.md  9. QA Engineer.md
tests/: test_basic_functionality.py  test_llm_integration.py  test_search_tool.py  test_tool_manager.py
typings/: kokoro.pyi  ollama.pyi  scipy.pyi  sounddevice.pyi  transformers.pyi  whisper.pyi
