[project]
name = "chatter"
version = "0.1.0"
description = "Voice AI Assistant with push-to-talk functionality using Ollama and Kokoro TTS"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kokoro>=0.9.2",
    "gradio>=5.38.0",
    "numpy>=2.2.6",
    "ollama>=0.5.1",
    "openai-whisper>=20250625",
    "requests>=2.31.0",
    "scipy>=1.16.0",
    "sounddevice>=0.5.2",
    "soundfile>=0.12.0",
    "speechrecognition>=3.14.3",
    "pip>=25.1.1",
]

[project.scripts]
chatter = "chatter.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
